bindings/go/marketdata/marketdata_uniffi.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V6 in this file.           ⚠️

typedef struct RustBuffer {
	uint64_t capacity;
	uint64_t len;
	uint8_t *data;
} RustBuffer;
typedef struct ForeignBytes {
	int32_t len;
	const uint8_t *data;
} ForeignBytes;
// Error definitions
typedef struct RustCallStatus {
	int8_t code;
	RustBuffer errorBuf;
} RustCallStatus;
typedef void (*UniffiRustFutureContinuationCallback)(uint64_t data, int8_t poll_result);
typedef void (*UniffiCallbackInterfaceFree)(uint64_t handle);
typedef void (*UniffiCallbackInterfaceWebSocketListenerMethod0)(uint64_t uniffi_handle, void* uniffi_out_return, RustCallStatus* callStatus );
typedef void (*UniffiCallbackInterfaceWebSocketListenerMethod1)(uint64_t uniffi_handle, RustBuffer data_json, void* uniffi_out_return, RustCallStatus* callStatus );
typedef void (*UniffiCallbackInterfaceWebSocketListenerMethod2)(uint64_t uniffi_handle, RustBuffer data_json, void* uniffi_out_return, RustCallStatus* callStatus );
typedef void (*UniffiCallbackInterfaceWebSocketListenerMethod3)(uint64_t uniffi_handle, int8_t will_reconnect, void* uniffi_out_return, RustCallStatus* callStatus );
typedef void (*UniffiCallbackInterfaceWebSocketListenerMethod4)(uint64_t uniffi_handle, RustBuffer message, void* uniffi_out_return, RustCallStatus* callStatus );
typedef void (*UniffiCallbackInterfaceWebSocketListenerMethod5)(uint64_t uniffi_handle, RustBuffer error_message, void* uniffi_out_return, RustCallStatus* callStatus );
typedef void (*UniffiCallbackInterfaceWebSocketListenerMethod6)(uint64_t uniffi_handle, uint32_t attempt, void* uniffi_out_return, RustCallStatus* callStatus );
typedef void (*UniffiCallbackInterfaceWebSocketListenerMethod7)(uint64_t uniffi_handle, uint32_t attempts, void* uniffi_out_return, RustCallStatus* callStatus );
typedef void (*UniffiCallbackInterfaceWebSocketListenerMethod8)(uint64_t uniffi_handle, uint64_t count, void* uniffi_out_return, RustCallStatus* callStatus );
typedef struct UniffiVTableCallbackInterfaceWebSocketListener {
    UniffiCallbackInterfaceWebSocketListenerMethod0 onConnected;
    UniffiCallbackInterfaceWebSocketListenerMethod1 onAuthenticated;
    UniffiCallbackInterfaceWebSocketListenerMethod2 onUnauthenticated;
    UniffiCallbackInterfaceWebSocketListenerMethod3 onDisconnected;
    UniffiCallbackInterfaceWebSocketListenerMethod4 onMessage;
    UniffiCallbackInterfaceWebSocketListenerMethod5 onError;
    UniffiCallbackInterfaceWebSocketListenerMethod6 onReconnecting;
    UniffiCallbackInterfaceWebSocketListenerMethod7 onReconnectFailed;
    UniffiCallbackInterfaceWebSocketListenerMethod8 onMessagesDropped;
    UniffiCallbackInterfaceFree uniffiFree;
} UniffiVTableCallbackInterfaceWebSocketListener;
uint64_t uniffi_marketdata_uniffi_fn_method_websocketclient_unsubscribe(void* ptr, RustBuffer channel, RustBuffer symbol
);
void* uniffi_marketdata_uniffi_fn_clone_websocketlistener(void* ptr, RustCallStatus *out_status
);
void uniffi_marketdata_uniffi_fn_free_websocketlistener(void* ptr, RustCallStatus *out_status
);
void uniffi_marketdata_uniffi_fn_init_callback_vtable_websocketlistener(UniffiVTableCallbackInterfaceWebSocketListener* vtable
);
void uniffi_marketdata_uniffi_fn_method_websocketlistener_on_connected(void* ptr, RustCallStatus *out_status
);
void uniffi_marketdata_uniffi_fn_method_websocketlistener_on_disconnected(void* ptr, int8_t will_reconnect, RustCallStatus *out_status
);
void uniffi_marketdata_uniffi_fn_method_websocketlistener_on_message(void* ptr, RustBuffer message, RustCallStatus *out_status
);
void uniffi_marketdata_uniffi_fn_method_websocketlistener_on_error(void* ptr, RustBuffer error_message, RustCallStatus *out_status
);
void uniffi_marketdata_uniffi_fn_method_websocketlistener_on_reconnecting(void* ptr, uint32_t attempt, RustCallStatus *out_status
);
void uniffi_marketdata_uniffi_fn_method_websocketlistener_on_reconnect_failed(void* ptr, uint32_t attempts, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_func_new_rest_client_with_api_key(RustBuffer api_key, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_func_new_rest_client_with_api_key_and_tls(RustBuffer api_key, RustBuffer base_url, RustBuffer tls, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_func_new_rest_client_with_bearer_token(RustBuffer bearer_token, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_func_new_rest_client_with_bearer_token_and_tls(RustBuffer bearer_token, RustBuffer base_url, RustBuffer tls, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_func_new_rest_client_with_sdk_token(RustBuffer sdk_token, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_func_new_rest_client_with_sdk_token_and_tls(RustBuffer sdk_token, RustBuffer base_url, RustBuffer tls, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_func_new_websocket_client(RustBuffer api_key, void* listener, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_func_new_websocket_client_with_config(RustBuffer api_key, void* listener, RustBuffer endpoint, RustBuffer reconnect_config, RustBuffer health_check_config, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_func_new_websocket_client_with_endpoint(RustBuffer api_key, void* listener, RustBuffer endpoint, RustCallStatus *out_status
);
RustBuffer ffi_marketdata_uniffi_rustbuffer_alloc(uint64_t size, RustCallStatus *out_status
);
RustBuffer ffi_marketdata_uniffi_rustbuffer_from_bytes(ForeignBytes bytes, RustCallStatus *out_status
);
void ffi_marketdata_uniffi_rustbuffer_free(RustBuffer buf, RustCallStatus *out_status
);
RustBuffer ffi_marketdata_uniffi_rustbuffer_reserve(RustBuffer buf, uint64_t additional, RustCallStatus *out_status
);
void ffi_marketdata_uniffi_rust_future_poll_u8(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_marketdata_uniffi_rust_future_cancel_u8(uint64_t handle
);
void ffi_marketdata_uniffi_rust_future_free_u8(uint64_t handle
);
uint8_t ffi_marketdata_uniffi_rust_future_complete_u8(uint64_t handle, RustCallStatus *out_status
);
void ffi_marketdata_uniffi_rust_future_poll_i8(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_marketdata_uniffi_rust_future_cancel_i8(uint64_t handle
);
void ffi_marketdata_uniffi_rust_future_free_i8(uint64_t handle
);
int8_t ffi_marketdata_uniffi_rust_future_complete_i8(uint64_t handle, RustCallStatus *out_status
);
void ffi_marketdata_uniffi_rust_future_poll_u16(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_marketdata_uniffi_rust_future_cancel_u16(uint64_t handle
);
void ffi_marketdata_uniffi_rust_future_free_u16(uint64_t handle
);
uint16_t ffi_marketdata_uniffi_rust_future_complete_u16(uint64_t handle, RustCallStatus *out_status
);
void ffi_marketdata_uniffi_rust_future_poll_i16(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_marketdata_uniffi_rust_future_cancel_i16(uint64_t handle
);
void ffi_marketdata_uniffi_rust_future_free_i16(uint64_t handle
);
int16_t ffi_marketdata_uniffi_rust_future_complete_i16(uint64_t handle, RustCallStatus *out_status
);
void ffi_marketdata_uniffi_rust_future_poll_u32(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_marketdata_uniffi_rust_future_cancel_u32(uint64_t handle
);
void ffi_marketdata_uniffi_rust_future_free_u32(uint64_t handle
);
uint32_t ffi_marketdata_uniffi_rust_future_complete_u32(uint64_t handle, RustCallStatus *out_status
);
void ffi_marketdata_uniffi_rust_future_poll_i32(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_marketdata_uniffi_rust_future_cancel_i32(uint64_t handle
);
void ffi_marketdata_uniffi_rust_future_free_i32(uint64_t handle
);
int32_t ffi_marketdata_uniffi_rust_future_complete_i32(uint64_t handle, RustCallStatus *out_status
);
void ffi_marketdata_uniffi_rust_future_poll_u64(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_marketdata_uniffi_rust_future_cancel_u64(uint64_t handle
);