bindings/csharp/MarketdataUniffi/marketdata_uniffi.cs


    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_websocketclient_unsubscribe(
        IntPtr @ptr,
        RustBuffer @channel,
        RustBuffer @symbol
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_clone_websocketlistener(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void uniffi_marketdata_uniffi_fn_free_websocketlistener(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void uniffi_marketdata_uniffi_fn_init_callback_vtable_websocketlistener(
        ref _UniFFILib.UniffiVTableCallbackInterfaceWebSocketListener @vtable
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void uniffi_marketdata_uniffi_fn_method_websocketlistener_on_connected(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void uniffi_marketdata_uniffi_fn_method_websocketlistener_on_disconnected(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void uniffi_marketdata_uniffi_fn_method_websocketlistener_on_message(
        IntPtr @ptr,
        RustBuffer @message,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void uniffi_marketdata_uniffi_fn_method_websocketlistener_on_error(
        IntPtr @ptr,
        RustBuffer @errorMessage,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void uniffi_marketdata_uniffi_fn_method_websocketlistener_on_reconnecting(
        IntPtr @ptr,
        uint @attempt,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void uniffi_marketdata_uniffi_fn_method_websocketlistener_on_reconnect_failed(
        IntPtr @ptr,
        uint @attempts,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_func_new_rest_client_with_api_key(
        RustBuffer @apiKey,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_func_new_rest_client_with_api_key_and_tls(
        RustBuffer @apiKey,
        RustBuffer @baseUrl,
        RustBuffer @tls,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_func_new_rest_client_with_bearer_token(
        RustBuffer @bearerToken,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_func_new_rest_client_with_bearer_token_and_tls(
        RustBuffer @bearerToken,
        RustBuffer @baseUrl,
        RustBuffer @tls,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_func_new_rest_client_with_sdk_token(
        RustBuffer @sdkToken,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_func_new_rest_client_with_sdk_token_and_tls(
        RustBuffer @sdkToken,
        RustBuffer @baseUrl,
        RustBuffer @tls,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_func_new_websocket_client(
        RustBuffer @apiKey,
        IntPtr @listener,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_func_new_websocket_client_with_config(
        RustBuffer @apiKey,
        IntPtr @listener,
        RustBuffer @endpoint,
        RustBuffer @reconnectConfig,
        RustBuffer @healthCheckConfig,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_func_new_websocket_client_with_endpoint(
        RustBuffer @apiKey,
        IntPtr @listener,
        RustBuffer @endpoint,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer ffi_marketdata_uniffi_rustbuffer_alloc(
        ulong @size,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer ffi_marketdata_uniffi_rustbuffer_from_bytes(
        ForeignBytes @bytes,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rustbuffer_free(
        RustBuffer @buf,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer ffi_marketdata_uniffi_rustbuffer_reserve(
        RustBuffer @buf,
        ulong @additional,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rust_future_poll_u8(
        IntPtr @handle,
        IntPtr @callback,
        IntPtr @callbackData
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rust_future_cancel_u8(IntPtr @handle);

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rust_future_free_u8(IntPtr @handle);

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern byte ffi_marketdata_uniffi_rust_future_complete_u8(
        IntPtr @handle,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rust_future_poll_i8(
        IntPtr @handle,
        IntPtr @callback,
        IntPtr @callbackData
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rust_future_cancel_i8(IntPtr @handle);

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rust_future_free_i8(IntPtr @handle);

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern sbyte ffi_marketdata_uniffi_rust_future_complete_i8(
        IntPtr @handle,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rust_future_poll_u16(
        IntPtr @handle,
        IntPtr @callback,
        IntPtr @callbackData
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rust_future_cancel_u16(IntPtr @handle);

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rust_future_free_u16(IntPtr @handle);

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort ffi_marketdata_uniffi_rust_future_complete_u16(
        IntPtr @handle,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rust_future_poll_i16(
        IntPtr @handle,
        IntPtr @callback,
        IntPtr @callbackData
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rust_future_cancel_i16(IntPtr @handle);

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rust_future_free_i16(IntPtr @handle);

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern short ffi_marketdata_uniffi_rust_future_complete_i16(
        IntPtr @handle,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rust_future_poll_u32(
        IntPtr @handle,
        IntPtr @callback,
        IntPtr @callbackData
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rust_future_cancel_u32(IntPtr @handle);

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rust_future_free_u32(IntPtr @handle);

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern uint ffi_marketdata_uniffi_rust_future_complete_u32(
        IntPtr @handle,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rust_future_poll_i32(
        IntPtr @handle,
        IntPtr @callback,
        IntPtr @callbackData
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rust_future_cancel_i32(IntPtr @handle);

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rust_future_free_i32(IntPtr @handle);

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern int ffi_marketdata_uniffi_rust_future_complete_i32(
        IntPtr @handle,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rust_future_poll_u64(
        IntPtr @handle,
        IntPtr @callback,
        IntPtr @callbackData
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void ffi_marketdata_uniffi_rust_future_cancel_u64(IntPtr @handle);
